--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -12,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Androidapp"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.Test2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.WasmEdgeActivity"
+            android:exported="false" />
         <activity
             android:name=".activity.Test1Activity"
             android:exported="false" />
